--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,11 @@
       <input type="text" id="description" name="description"><br>
       <input type="submit" value="Add Intent">
     </form>
-    
+
+<div class="chat">
+ <h1 class="headertext">
+ <button class="button">
+</div>
 
     <script>
       const form = document.getElementById('add-intent-form');
