--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,10 @@
     </form>
 
 <div class="chat">
- <h1 class="headertext">
- <button class="button">
+ <h1 class="headertext">New generation GPT </h1>
+ <button class="button">Jump in</button>
+ 
+ 
 </div>
 
     <script>
