--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
       <input type="submit" value="Add Intent">
     </form>
 
-<div class="chat">
+<div class="header">
  <h1 class="headertext">New generation GPT </h1>
  <button class="button">Jump in</button>
  
