--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     </form>
 
 <div class="header">
- <h1 class="headertext">New generation GPT </h1>
+ <h1 class="headertext">TestGPT</h1>
  <button class="button">Jump in</button>
 </div>
 
